# multisig-predicate

./: README.md
ec-recover/: Forc.toml
ec-recover/src/: main.sw
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: App.test.tsx  App.tsx  index.tsx
frontend/src/components/: create.tsx
frontend/src/ec-recover/: index.ts
frontend/src/ec-recover/factories/: EcRecoverAbi__factory.ts
frontend/src/predicate/: index.ts
frontend/src/predicate/factories/: PredicateAbi__factory.ts
frontend/src/script/: generatePredicateData.js
frontend/src/simple-predicate/: index.ts
frontend/src/simple-predicate/factories/: SimplePredicateAbi__factory.ts
frontend/src/tx-count/: index.ts
frontend/src/tx-count/factories/: TxCountAbi__factory.ts
frontend/tests/: ec-recover.test.ts  predicate.test.ts  simple.test.ts  utilities.ts
predicate/: Cargo.toml  package-lock.json
predicate/src/: main.sw  main_configurables.sw  main_ec_recover.sw  main_full.sw  main_tx.sw
predicate/src/predicate/: index.ts
predicate/src/predicate/factories/: PredicateAbi__factory.ts
predicate/tests/: harness.rs
script/: Cargo.toml  Forc.toml
script/src/: main.sw
script/tests/: harness.rs
simple-predicate/: Cargo.toml  Forc.toml
simple-predicate/tests/: harness.rs
tx-count/: Forc.toml
tx-count/src/: main.sw
